# kinesisvideo-ros2

kinesis_video_streamer/: CMakeLists.txt
kinesis_video_streamer/config/: color.yaml  depth.yaml  sample_config.yaml
kinesis_video_streamer/include/kinesis_video_streamer/: subscriber_callbacks.h
kinesis_video_streamer/launch/: kinesis_video_streamer.launch.py
kinesis_video_streamer/src/: main.cpp
kinesis_video_streamer/test/: kinesis_video_streamer_test.cpp  kinesis_video_streamer_test_utils.h  subscriber_callbacks_test.cpp
